--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -20,9 +20,9 @@
         </div>
     </nav>
 
-    <div style="min-height: calc(100vh - 238px) !important;">
+    <div style="min-height: calc(100vh - 210px) !important;">
 
-        <div class="my-5 card bg-light col-md-5 mx-auto">
+        <div class="px-5 my-5 mx-auto card bg-light col-sm-8 col-md-6 col-lg-4">
             <div class="my-4 text-center h4">
                 <b>Авторизация</b>
             </div>
@@ -50,6 +50,7 @@
                            name="password"
                            id="labelPassword"
                            placeholder="введите пароль"
+                           autocomplete="on"
                            required>
                 </div>
                 <div class="form-group text-right">
@@ -61,8 +62,8 @@
 
     <footer class="py-3 bg-dark">
         <div class="pt-3 text-white text-center text-small">
-            <p class="mb-1">Личный кабинет преподавателя</p>
-            <p class="mb-1">© БГТУ «ВОЕНМЕХ» им. Д.Ф. Устинова 2020</p>
+            <!--            <p class="mb-1">Личный кабинет преподавателя</p>-->
+            <p class="mb-1">БГТУ «ВОЕНМЕХ» им. Д.Ф. Устинова</p>
         </div>
     </footer>
 </body>
