--- a/src/main/resources/static/Styles/main.css
+++ b/src/main/resources/static/Styles/main.css
@@ -3,7 +3,7 @@
     background: url(/Images/simple.jpg) no-repeat center / cover;
     padding: 10px;
     /*width: 100vw;*/
-    min-height: calc(100vh - 315px) !important; /*331*/
+    min-height: calc(100vh - 314px) !important; /*331*/
     /*min-height:1000px!important;*/
 }
 
@@ -33,7 +33,21 @@
 }
 /* Хлебные крошки breadcrumb */
 
-
+/** block-ui spinner */
+.block-ui-message {
+    cursor: wait;
+    display: inline-block;
+    text-align: left;
+    color: #f5f5f5;
+    padding: 20px 20px 20px 87px !important;
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    border-radius: 4px;
+    font-size: 16px;
+    background: url(/Images/catLoader.gif) no-repeat 30px center #333333;
+    opacity: inherit;
+}
+/** /block-ui spinner */
 
 /* Чтобы работали модалки в Bootstrap 4  либо добавить стили, либо замена в исходниках*/
 /* изменено modal-in-class in на show */
@@ -73,26 +87,26 @@
 }
 
 #nav a::after {
-     --scale: 0;
+    --scale: 0;
 
-     content: '';
-     position: absolute;
-     left: 0;
-     right: 0;
-     top: 100%;
-     height: 3px;
-     background: linear-gradient(135deg, rgb(115, 250, 200), rgb(0, 190, 225));
-     transform: scaleX(var(--scale));
-     transition: transform .3s cubic-bezier(.51, .92, .24, 1);
- }
+    content: '';
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 100%;
+    height: 3px;
+    background: linear-gradient(135deg, rgb(115, 250, 200), rgb(0, 190, 225));
+    transform: scaleX(var(--scale));
+    transition: transform .3s cubic-bezier(.51, .92, .24, 1);
+}
 
 #nav a:hover {
-     opacity: 1;
- }
+    opacity: 1;
+}
 
 #nav a:hover::after {
-     --scale: 1;
- }
+    --scale: 1;
+}
 
 /* Меню для мобильной версии*/
 @media (max-width: 1140px) {
