--- a/src/main/resources/static/Styles/main.css
+++ b/src/main/resources/static/Styles/main.css
@@ -13,12 +13,33 @@
     overflow: auto;
 }
 
-.table-container {
-    width: 100%;
-    overflow-y: auto;
-    _overflow: auto;
-    margin: 0 0 1em;
+/*@media (min-width: 1780px) {
+    .table-container {
+        !*display: block;*!
+        width: 100%;
+        overflow-x: auto;
+        -webkit-overflow-scrolling: touch;
+        !*-ms-overflow-style: -ms-autohiding-scrollbar;*!
+    }
+}*/
+@media (min-width: 1175px) {
+    .table-container {
+        display: block;
+        width: 100%;
+        overflow-x: auto;
+        -webkit-overflow-scrolling: touch;
+        -ms-overflow-style: -ms-autohiding-scrollbar;
+    }
 }
+
+/*@media (max-width: 1199.98px)
+.table-responsive-xl {
+    display: block;
+    width: 100%;
+    overflow-x: auto;
+    -webkit-overflow-scrolling: touch;
+    -ms-overflow-style: -ms-autohiding-scrollbar;
+}*/
 
 /* Хлебные крошки breadcrumb */
 .breadcrumb{
