--- a/src/main/resources/static/Templates/linkAttestationId.html
+++ b/src/main/resources/static/Templates/linkAttestationId.html
@@ -1,8 +1,8 @@
 <div ng-show="ur == 'SECRETARY'">
 
     <ol class="breadcrumb">
-        <li class="breadcrumb-item"><a ui-sref="appoint">Список групп</a></li>
-        <li class="breadcrumb-item active" aria-current="page">Назначение преподавателей</li>
+        <li class="breadcrumb-item"><a ui-sref="linkAttestation">Список групп</a></li>
+        <li class="breadcrumb-item active" aria-current="page">Назначение преподавателей. Аттестационные ведомости</li>
     </ol>
 
     <div class="p-0 my-4 card col-md-10 mx-auto border-info">
