--- a/src/main/resources/static/Templates/linkSession.html
+++ b/src/main/resources/static/Templates/linkSession.html
@@ -2,10 +2,14 @@
 
     <div class="py-4 mt-4 card col-md-10 mx-auto border-info">
 
-        <form class="simple-form" name="appointForm">
-            <div class="col-md-6 mx-auto mt-3">
+        <div class="font-weight-bold h4 text-center mt-2">Назначение преподавателей</div>
+        <div class="font-weight-bold h5 text-center mt-2">Сессионные ведомости</div>
+        <hr>
+
+        <form class="simple-form" name="linkSessionForm">
+            <div class="col-md-4 mx-auto my-3">
                 <ui-select ng-model="group.selected"
-                           ng-change="selectedGroup()"
+                           ng-change="sessionSelectedGroup()"
                            ng-disabled="!groupList.length"
                            name="group"
                            class="col-md-12 p-0"
@@ -36,8 +40,12 @@
                 </tr>
                 </thead>
                 <tbody>
-                <tr ng-repeat="group in groups">
-                    <td class="text-center border-info"></td>
+                <tr ng-repeat="group in groups | orderBy:'curSemester'">
+                    <td class="text-center border-info">
+                        <i class="text-warning fa fa-2x fa-exclamation px-2" ng-if="group.blank" data-toggle="tooltip" data-placement="top"
+                           title="Внимание! Остались незаполненные поля">
+                        </i>
+                    </td>
                     <td class="text-center border-info">{{group.number}}</td>
                     <td class="text-center border-info h5">
                         <div class="badge badge-secondary">{{group.curSemester}}</div>
@@ -45,7 +53,7 @@
                     <td class="text-center border-info">
                         <button class="btn btn-md btn-info text-white"
                                 type="button"
-                                ui-sref="appointId({id: group.id})"
+                                ui-sref="linkSessionId({id: group.id})"
                                 title="Назначить преподавателей">
                             <i class="fa fa-share-square-o"></i>
                         </button>
